...
        android:background="#BC2222"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="154dp" />
    -->

    <Button
        android:id="@+id/taskFragmentAddTaskButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:text="Add Task"
        app:layout_constraintBottom_toBottomOf="@+id/testText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
